ajout de profile et role dans l'inscription

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,6 +16,11 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :profile,
+                required: true %>
+    <%= f.input :role,
+                collection: %w[creator developer angel],
+                required: true %>
   </div>
 
   <div class="form-actions">
