--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -43,18 +43,18 @@
   <h2 class="text-center">What's in it for you ?</h2>
 
   <div class="cards">
-
     <div class="card">
       <img src="images/apply.svg" alt="">
       <h4>Project ideas Maker</h4>
-      <p>"I have a dream" is what you're saying ? Share it here to make it real 👇</p>
+      <p>"I have a dream" is what you're saying ?
+      link_to "Share it here", NEW-PROJECT-LINK to make it real ✨</p>
       <a></a>
     </div>
 
     <div class="card">
       <img src="images/learn.svg" alt="">
       <h4>Developer</h4>
-      <p>Pratice makes perfect and you want to thrive </p>
+      <p>Pratice makes perfect and you want to thrive into your code 🚀</p>
     </div>
 
     <div class="card">
@@ -62,18 +62,35 @@
       <h4>Angel Investor</h4>
       <p>What's best than investing your money into fruitful ideas 🍏 </p>
     </div>
+  </div>
+</div>
+
+<div class="projects-container">
+  <div class="cards">
+
+        <% @projects.each do |project| %>
+          <div class="project-card">
+          <h4><%= link_to project.title, project_path(project)%></h4>
+          <p><%= project.description %></p>
+          </div>
+        <% end %>
 
   </div>
 </div>
 
-  <!-- code a footer -->
+
+
+
+
+
+  <!-- footer -->
   <div class="footer">
       <div class="links">
         <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-fw fa-github"></i></a>
         <a href="#"><i class="fab fa-fw fa-twitter"></i></a>
         <a href="#"><i class="fab fa-fw fa-instagram"></i></a>
-        <p>Much <i class="fas fa-heart"></i> was put into this website.</p>
+        <p>This website was created with passion  🐿  <i class="fas fa-heart"></i> </p>
       </div>
   </div>
 </div>
