boutton block et primary pour les login singin singup

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,9 +24,9 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Sign up" , class: "btn btn-primary btn-block"  %>
   </div>
 <% end %>
-
+<hr>
 <%= render "devise/shared/links" %>
 </div>
