ajout d'un raccourcis a home dans navbar + footer

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,13 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+.navbar-scurious {
+  text-decoration: none;
+  color: black;
+}
+
+.navbar-scurious:hover {
+  text-decoration: none;
+  color: black;
+}
