--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -10,7 +10,8 @@
 <div class="container">
   <%= simple_form_for :search, url: root_path, method: :get do |f| %>
     <div class="search-form-control form-group">
-      <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="Search a project here" />
+      <input class="form-control string required" id="search_query" type="text" name="search[query]" placeholder="Search a project here" />
+      <ul id="results"></ul>
       <button name="button" type="submit" class="btn btn-flat">
         <i class="fas fa-search"></i> Search
       </button>
