fixed js - commented code for now

--- a/app/views/candidates/new.html.erb
+++ b/app/views/candidates/new.html.erb
@@ -1,10 +1,9 @@
 
- <div class="row justify-content-center">
+ <div class="row justify-content-center form-page">
     <div class="col-md-8">
       <h1>Your application</h1>
 
       <%= simple_form_for [@project, @candidate] do |f| %>
-        <%= f.input :status %>
         <%= f.input :message %>
         <%= f.submit "Send your application", class: 'btn btn-primary btn-block btn-large' %>
       <% end %>
