--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -11,8 +11,17 @@
   <p><%= @project.evolution %></p>
 
   <div class="participation">
-  <%= link_to 'Participate to this project', root_path, class: 'btn btn-apply' %>
+  <%= link_to 'Participate to this project', new_project_candidate_path(@project), class: 'btn btn-apply' %>
   </div>
+
+  <% if current_user == @project.user %>
+    <div class="candidates">
+      <% @project.candidates.each do |candidate| %>
+        <p><%= candidate.user.email %></p>
+        <p><%= candidate.message %></p>
+      <% end %>
+    </div>
+  <% end  %>
 
   <div class="bottom-page">
     <%= link_to 'Back to homepage', root_path, class: 'btn btn-menu' %>
