homepage layout modif

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -19,6 +19,13 @@
   font-weight: bold
 }
 
+.banner-container .slogan {
+  position: absolute;
+  right: 20px;
+  text-align: right;
+  width: 400px;
+}
+
 .project-banner {
   background-size: cover;
   background-position: center;
