--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,9 +14,10 @@
 .navbar-scurious {
   text-decoration: none;
   color: black;
-}
-
-.navbar-scurious:hover {
-  text-decoration: none;
-  color: black;
+  font-size: 30px;
+  font-family: 'Monofett', cursive;
+  &:hover {
+    text-decoration: none;
+    color: black;
+  }
 }
