cards images + avatar + scurious font

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1504006833117-8886a355efbf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80)">
+<div class="banner" style="background-image: url(https://images.unsplash.com/photo-1504006833117-8886a355efbf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80)">
   <div class=banner-container>
     <h1>Welcome to <em>Scurious</em></h1>
     <br><br><br><br>
@@ -22,13 +22,13 @@
     </div>
 
     <div class="card">
-      <img src="https://cdn.pixabay.com/photo/2017/01/13/01/22/rocket-1976107__480.png" alt="">
+      <img src="https://cdn.pixabay.com/photo/2017/03/08/14/20/flat-2126876_1280.png" alt="">
       <h4>Developer</h4>
       <p>Pratice makes perfect and you want to thrive into your code ?<br>Find projects 🚀</p>
     </div>
 
     <div class="card">
-      <img src="https://cdn.pixabay.com/photo/2016/06/14/02/35/pineapple-1455590__480.png" alt="">
+      <img src="https://cdn.pixabay.com/photo/2014/04/02/16/20/lemon-306958_1280.png" alt="">
       <h4>Angel Investor</h4>
       <p>What's best than investing money into fruitful ideas, it's<br>juicy here! 🍋 </p>
     </div>
