--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -11,7 +11,7 @@
   <p><%= @project.evolution %></p>
 
   <div class="participation">
-  <%= link_to 'Participate to this project', root_path, class: 'btn btn-apply' %>
+  <%= link_to 'Participate to this project', new_project_candidate_path(@project), class: 'btn btn-apply' %>
   </div>
 
   <div class="bottom-page">
