--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -15,12 +15,18 @@
   box-shadow: 0 0 5px rgb(230,230,230);
   text-align: center;
   padding: 20px;
+  margin: 10px;
   border: 1px solid rgb(230,230,230);
 }
 
 .card img {
-  height: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 28%;
+  margin-bottom: 5px;
 }
+
 .card p {
   opacity: 0.8;
 }
