--- a/app/views/candidates/new.html.erb
+++ b/app/views/candidates/new.html.erb
@@ -1,5 +1,5 @@
 
- <div class="row justify-content-center">
+ <div class="row justify-content-center form-page">
     <div class="col-md-8">
       <h1>Your application</h1>
 
