--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -53,7 +53,7 @@
 
   </div>
 </div>
-  <div class="bottom-page">
-    <%= link_to 'Back to the top', root_path %>
+   <div class="bottom-page text-center">
+    <%= link_to 'Back to the top', root_path, class: 'btn btn-menu' %>
   </div>
 </div>
