fixed buttons + create and update methods

--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,6 +1,6 @@
 
  <div class="row justify-content-center form-page">
-    <div class="col-md-8">
+    <div class="container col-md-8">
       <h1>Your Project</h1>
       <%= render './shared/form', project: @project %>
     </div>
