--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -2,10 +2,10 @@
   <h1><%= @project.title %></h1>
 </div>
 
+<div class="container">
+  <%= render './shared/form', project: @project %>
+</div>
 
-<%= render './shared/form', project: @project %>
-
-  <div class="bottom-page">
-    <%= link_to 'Back to homepage', root_path, class: 'btn btn-menu' %>
-  </div>
+<div class="bottom-page">
+  <%= link_to 'Back to homepage', root_path, class: 'btn btn-menu' %>
 </div>
