--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,8 +20,9 @@
           <li class="nav-item dropdown">
             <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://cdn.pixabay.com/photo/2017/01/31/19/24/animal-2026657_1280.png" />
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <%= link_to "My Scrat", user_path(current_user), class: "dropdown-item" %>
+              <%= link_to "Dashboard", dashboard_path, class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, method: :delete, data: {confirm: 'Are you sure to quit this session?'}, class: "dropdown-item" %>
-              <%= link_to "Dashboard", projects_path, class: "dropdown-item" %>
             </div>
           </li>
         <% end %>
