--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for (@project) do |f| %>
         <%= f.input :title %>
         <%= f.input :description %>
+        <%= f.input :evolution %>
         <%= f.button :submit, class: 'btn btn-primary' %>
       <% end %>
