--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,21 +2,15 @@
   <h1> <%= @user.email %>’s page </h1>
 </div>
 
-<div class="container">
-  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= f.error_notification %>
-    <div class="form-inputs">
-      <%= f.input :profile,
-                  required: true %>
-    </div>
-    <div class="form-actions">
-      <%= f.button :submit, "Save changes" , class: "btn btn-edit btn-block"  %>
-    </div>
+<div class="container form-page">
+  <%= simple_form_for (@user) do |f| %>
+      <%= f.input :profile %>
+      <%= f.button :submit, "Save changes", class: 'btn btn-primary btn-block'  %>
   <% end %>
 </div>
 
-<div class="bottom-page">
-  <%= link_to 'Back to homepage', root_path, class: 'btn btn-menu' %>
+<div class="bottom-page text-center">
+  <%= link_to 'Back to homepage', root_path, class: 'btn-menu' %>
 </div>
 
 
