main layout on banners, searchbar, project-cards, project-page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,17 +30,9 @@ a {
   margin: 0 auto;
 }
 
-.links p {
-  color: white;
-  font-size: 14px;
+.projects-container {
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
-.links a {
-  color: green;
-  width: 30px;
-  font-size: 18px;
-}
 
-.links .fa-heart {
-  color: red;
-}
