--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,3 +6,18 @@
   // bottom: 0;
   width: 100%;
 }
+
+.links p {
+  color: white;
+  font-size: 14px;
+}
+
+.links a {
+  color: green;
+  width: 30px;
+  font-size: 18px;
+}
+
+.links .fa-heart {
+  color: red;
+}
