--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -7,6 +7,6 @@
   </div>
 </div>
 
-<div class="col-6">
-<%= link_to 'Back', root_path %>
+<div class="bottom-page text-center">
+  <%= link_to 'Back to homepage', root_path, class: 'btn btn-menu' %>
 </div>
