--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,6 +4,6 @@
     <a href="#"><i class="fab fa-fw fa-github"></i></a>
     <a href="#"><i class="fab fa-fw fa-twitter"></i></a>
     <a href="#"><i class="fab fa-fw fa-instagram"></i></a>
-    <p>This website was created with passion  🐿  <i class="fas fa-heart"></i> </p>
+    <p>This website was created with passion  🐿 </p>
   </div>
 </div>
