--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,5 +1,4 @@
 .banner {
-  padding-top: 20px;
   margin-bottom: 25px;
   background-size: cover;
   background-position: center;
@@ -11,6 +10,8 @@
 
 .banner-container {
   padding: 15px 10px;
+  margin-left: 7px;
+  margin-right: 7px;
   width: 100%;
   color: white;
 }
@@ -30,11 +31,21 @@
   background-size: cover;
   background-position: center;
   height: 300px;
-  width: 100%;
+  margin-bottom: 25px;
   display: flex;
   text-align: center;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  padding: 15px 10px;
+  padding: 25px 25px;
   color: white;
+}
+
+.project-banner .title-container {
+  width: 40%;
+
+  h1 {
+    margin-top: revert;
+    text-align: left;
+    padding-left: 20px;
+  }
 }
