--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,7 +4,7 @@
 
 .cards {
   margin-bottom: 25px;
-  margin-top: 30px;
+  margin-top: 20px;
   padding: 12px;
 }
 
@@ -27,15 +27,32 @@
   margin-bottom: 5px;
 }
 
-.card p {
-  opacity: 0.8;
+.card a {
+  color: #46494c;
+  font-weight: bold;
+  font-size: 22px;
+  &:hover {
+    color: #FECD00;
+    text-decoration:none;
+  }
 }
 
 .project-card {
-  padding: 10px 15px;
-  border-radius: 1px;
+  padding: 15px 15px;
+  border-radius: 2px;
   box-shadow: 0 0 5px rgb(230,230,230);
-  width: 500px;
+  width: 400px;
+  height: auto;
   margin-bottom: 10px;
   background-color: white;
+  h4 {
+  text-align: left;
+    a {
+    color: black;
+    text-decoration: none;
+    }
+  }
+  p {
+  text-align: left;
+  }
 }
