--- a/app/views/projects/_projectcard.html.erb
+++ b/app/views/projects/_projectcard.html.erb
@@ -1,4 +1,4 @@
 <div class="project-card">
-  <h4><%= link_to project.title, project_path(project)%></h4>
-  <p><%= project.description %></p>
+  <h4><a><%= link_to project.title, project_path(project)%><a></h4>
+  <p><%= project.description.truncate_words(15) %></p>
 </div>
