form inputs of project

--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -9,7 +9,7 @@
 }
 
 .search-form-control .form-control:focus {
-  border: 2px solid #46494c;
+  border: 2px solid #FECD00;
   outline: none !important;
   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
 }
