--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -37,22 +37,123 @@
   }
 }
 
+// .project-card {
+//   padding: 15px 15px;
+//   border-radius: 2px;
+//   box-shadow: 0 0 5px rgb(230,230,230);
+//   width: 400px;
+//   height: auto;
+//   margin: 10px;
+//   background-color: white;
+//   h4 {
+//   text-align: left;
+//     a {
+//     color: black;
+//     text-decoration: none;
+//     }
+//   }
+//   p {
+//   text-align: left;
+//   }
+// }
+
 .project-card {
-  padding: 15px 15px;
-  border-radius: 2px;
-  box-shadow: 0 0 5px rgb(230,230,230);
+  display: block;
+  top: 0px;
+  position: relative;
   width: 400px;
-  height: auto;
-  margin-bottom: 10px;
-  background-color: white;
-  h4 {
+  background-color: #F4F4F4;
+  box-shadow: 0px 2px 4px rgba(38, 38, 38, 0.2);
+  border-radius: 4px;
+  padding: 20px 14px;
+  margin: 12px;
+  text-decoration: none;
+  z-index: 0;
+  overflow: hidden;
+  border: 1px solid #F4F4F4;
   text-align: left;
-    a {
+  a {
     color: black;
     text-decoration: none;
-    }
   }
-  p {
+
+  &:hover {
+    transition: all 0.2s ease-out;
+    box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
+    top: -4px;
+    border: 1px solid grey;
+    background-color: white;
+  }
+
+  &:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: -16px;
+    right: -16px;
+    background: grey;
+    height: 32px;
+    width: 32px;
+    border-radius: 32px;
+    border: 1px solid #F4F4F4;
+    transform: scale(2);
+    transform-origin: 50% 50%;
+    transition: transform 0.15s ease-out;
+  }
+
+  &:hover:before {
+    transform: scale(2.15);
+  }
+}
+
+.candidates {
+  display: flex;
+}
+.candidate-card {
+  display: block;
+  top: 0px;
+  position: relative;
+  width: 400px;
+  background-color: #F4F4F4;
+  box-shadow: 0px 2px 4px rgba(38, 38, 38, 0.2);
+  border-radius: 4px;
+  padding: 20px 14px;
+  margin: 12px;
+  text-decoration: none;
+  z-index: 0;
+  overflow: hidden;
+  border: 1px solid #F4F4F4;
   text-align: left;
+  a {
+    color: black;
+    text-decoration: none;
+  }
+
+  &:hover {
+    transition: all 0.2s ease-out;
+    box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
+    top: -4px;
+    border: 1px solid green;
+    background-color: white;
+  }
+
+  &:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: -16px;
+    right: -16px;
+    background: green;
+    height: 32px;
+    width: 32px;
+    border-radius: 32px;
+    border: 1px solid #F4F4F4;
+    transform: scale(2);
+    transform-origin: 50% 50%;
+    transition: transform 0.15s ease-out;
+  }
+
+  &:hover:before {
+    transform: scale(2.15);
   }
 }
