--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -17,8 +17,7 @@
       <img src="https://cdn.pixabay.com/photo/2017/06/10/07/21/chat-2389223_1280.png" alt="">
       <h4>Idea generator</h4>
       <p>"I have a dream" is what you keep thinking ?<br>
-      <a> <%= link_to " Share it here ", new_project_path %> </a><br>to make it real 🌿</p>
-      <a></a>
+      <%= link_to " Share it here ", new_project_path %><br>to make it real 🌿</p>
     </div>
 
     <div class="card">
@@ -45,14 +44,19 @@
     </div>
   <% end %>
 
-  <div class="cards cards-results flex-wrap d-flex justify-content-around">
+  <div class="cards cards-results flex-wrap d-flex justify-content-center">
 
     <% @projects.each do |project| %>
       <%= render partial: 'projectcard', locals: { project: project } %>
     <% end %>
 
   </div>
+
+  <div class="text-center">
+    <%= link_to " Share a new project ", new_project_path, class: 'btn btn-apply' %>
+  </div>
 </div>
+
    <div class="bottom-page text-center">
     <%= link_to 'Back to the top', root_path, class: 'btn btn-menu' %>
   </div>
