--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -32,7 +32,7 @@
   font-weight: bold;
   font-size: 22px;
   &:hover {
-    color: #FECD00;
+    color: #fdc500;
     text-decoration:none;
   }
 }
