--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -53,7 +53,7 @@
   </div>
 
   <div class="text-center">
-    <%= link_to " Share a new project ", new_project_path, class: 'btn btn-apply' %>
+    <%= link_to " Share a new project ", new_project_path, class: 'btn btn-new' %>
   </div>
 </div>
 
