--- a/app/views/projects/_projectcard.html.erb
+++ b/app/views/projects/_projectcard.html.erb
@@ -1,5 +1,5 @@
 <div class="project-card">
   <%= link_to "", project_path(project), style: "position: absolute; height: 100%; width: 100%;" %>
   <h4><a><%= project.title %><a></h4>
-  <p><%= project.description.truncate_words(15) %></p>
+  <p><%= project.catchphrase %></p>
 </div>
