--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="project-banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1533651180995-3b8dcd33e834?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80)">
-  <h1> <%= @user.email %>'s page </h1>
+  <h1> <%= @user.username %>'s page </h1>
 </div>
 
 
@@ -7,6 +7,9 @@
 <div class="container project-info">
   <h3>Email</h3>
   <p><%= @user.email %></p>
+
+  <h3>Username</h3>
+  <p><%= @user.username %></p>
 
   <h3> Password</h3>
   <p> <%= link_to "Change my password",  edit_user_registration_path %></p>
