--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,7 +1,8 @@
 <div class="project-banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1533651180995-3b8dcd33e834?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80)">
   <h1>My Dashboard</h1>
   <div class="avatar-placeholder">
-    <p>AVATAR</p>
+     <% @user.photo.attached? ? key = @user.photo.key : key = "19jhc3a8utphedgglcuwlic9vpty" %>
+    <%= cl_image_tag(key, :gravity=>"face:center", :height=>80, :width=>80, :crop=>"thumb")%>
   </div>
 </div>
 
