--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,6 +25,7 @@
     <%= f.input :role,
                 collection: %w[creator developer angel],
                 required: true %>
+    <%= f.input :photo, as: :file %>
   </div>
 
   <div class="form-actions">
