--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -17,7 +17,16 @@
       <img src="https://cdn.pixabay.com/photo/2017/06/10/07/21/chat-2389223_1280.png" alt="">
       <h4>Idea generator</h4>
       <p>"I have a dream" is what you keep thinking ?<br>
-      <%= link_to " Share it here ", new_project_path %><br>to make it real 🌿</p>
+      <% if current_user %>
+        <% if current_user.role == "creator" %>
+          <%= link_to " Share it here ", new_project_path %>
+        <% else %>
+          They share it here
+        <% end %>
+      <% else %>
+        They share it here
+      <% end %>
+      to make it real 🌿</p>
     </div>
 
     <div class="card">
@@ -38,9 +47,6 @@
   <%= simple_form_for :search, url: root_path, method: :get do |f| %>
     <div id="search-data" class="search-form-control form-group mx-5">
       <input class="form-control string required text-center" id="search-input" type="text" name="search[query]" placeholder="Search a project here!" />
-<!--       <button name="button" type="submit" class="btn btn-flat">
-        <i class="fas fa-search"></i> Search
-      </button> -->
     </div>
   <% end %>
 
@@ -51,10 +57,13 @@
     <% end %>
 
   </div>
-
-  <div class="text-center">
-    <%= link_to " Share a new project ", new_project_path, class: 'btn btn-new' %>
-  </div>
+  <% if current_user %>
+    <% if current_user.role == "creator" %>
+      <div class="text-center">
+        <%= link_to " Share a new project ", new_project_path, class: 'btn btn-new' %>
+      </div>
+    <% end %>
+  <% end %>
 </div>
 
    <div class="bottom-page text-center">
